--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,13 +88,16 @@ header .logo:visited {
 	height: 100%;
 	overflow: auto;
 	background-color: #FFF;
+    text-align: center;
 }
 
 .home .sections {
 	margin: 0px auto;
-    text-align: center;
+    text-align: left;
     padding: 0px 50px;
     max-width: 1100px;
+    display: inline-block;
+    
 }
 
 .home section {
